# Rusty-Topic-Manipulator

./: Cargo.toml
src/: application_state.rs  args_console_handler.rs  commands.rs  console_handler.rs  console_manager.rs  file_handler.rs  main.rs  parsed_command.rs  runtime_console_handler.rs  settings.rs  topic_handler.rs  topic_writer.rs  undo_redo_handler.rs
src/console/: args_console_handler.rs  console_handler.rs  mod.rs  runtime_console_handler.rs
src/console_handler/: args_console_handler.rs  mod.rs  parsed_command.rs  runtime_console_handler.rs
src/controllers/: arg_controller.rs  args_controller.rs  commands.rs  controller_factory.rs  master_controller.rs  mod.rs  runtime_controller.rs
src/models/: github_gist_topic_writer.rs  local_topic_writer.rs  mod.rs  model.rs  network_topic_writer.rs  topic_handler.rs  undo_redo_handler.rs  writer_manager.rs
src/models/topic_writer/: local_file_handler.rs  mod.rs  network_file_handler.rs
src/topic_writer/: file_handler.rs  mod.rs
src/views/: arg_console_handler.rs  arg_view.rs  args_console_handler.rs  mod.rs  parsed_command.rs  runtime_console_handler.rs  runtime_view.rs
src/writer/: file_handler.rs  mod.rs  topic_writer.rs
