[package]
name = "rusty_topic_manipulator"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
directories = "5.0.1"
rand = "0.8.5"
clearscreen = "3.0.0"
arboard = "3.4.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.11", features = ["blocking", "json"] }
anyhow = "1.0.95"
octocrab = "0.42.1"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
